src/objects/Resource_Planning__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Motorola_Core_Directory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLT +1</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Resource Plannings</relationshipLabel>
        <relationshipName>Resource_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_PMD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program  (PMD)</label>
        <referenceTo>PMD_Program__c</referenceTo>
        <relationshipLabel>Resource Plannings</relationshipLabel>
        <relationshipName>Resource_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SW_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Project</label>
        <referenceTo>JIRA_Project__c</referenceTo>
        <relationshipLabel>Resource Plannings</relationshipLabel>
        <relationshipName>Resource_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_FTE__c</fullName>
        <label># of FTE</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Resource Planning</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000000000}</displayFormat>
        <label>Resource Planning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Plannings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>